crates/nyx-lexer/tests/snapshots/integration_tests__generics__basic_params.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: identity
- LBracket
- Ident: T
- RBracket
- LParen
- Ident: x
- Colon
- Ident: T
- RParen
- Arrow
- Ident: T
- Newline
- Indent
- Pass
- Newline
- Dedent
- Struct
- Ident: Box
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: value
- Colon
- Ident: T
- Newline
- Dedent
- Interface
- Ident: Container
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Func
- Ident: get
- LParen
- Star
- SelfLower
- Comma
- Ident: i
- Colon
- USize
- RParen
- Arrow
- Question
- Ident: T
- Newline
- Dedent
- Type
- Ident: Pair
- LBracket
- Ident: A
- Comma
- Ident: B
- RBracket
- Eq
- OkLiteral
- Newline
- Union
- Ident: Either
- LBracket
- Ident: L
- Comma
- Ident: R
- RBracket
- Newline
- Indent
- Ident: left
- Colon
- Ident: L
- Newline
- Ident: right
- Colon
- Ident: R
- Newline
- Dedent
