crates/nyx-lexer/tests/snapshots/integration_tests__generics__default_params.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Buffer
- LBracket
- Ident: T
- Eq
- U8
- RBracket
- Newline
- Indent
- Ident: data
- Colon
- Star
- Mut
- Ident: T
- Newline
- Ident: len
- Colon
- USize
- Newline
- Ident: cap
- Colon
- USize
- Newline
- Dedent
- Func
- Ident: create_buffer
- LBracket
- Ident: T
- Eq
- U8
- RBracket
- LParen
- Ident: cap
- Colon
- USize
- RParen
- Arrow
- Ident: Buffer
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Pass
- Newline
- Dedent
